syntax = "proto3";

package taskmanager;
import "common/event.proto";
import "common/common.proto";
import "common/stream.proto";

option go_package = "lightflus/proto/taskmanager";

/// RPC Api for Task Manager
service TaskManagerApi {
  /// Send event to operator
  rpc SendEventToOperator(common.KeyedDataEvent) returns (SendEventToOperatorResponse){}
  /// Attempt to terminate a sub-dataflow
  rpc StopDataflow(common.ResourceId) returns (StopDataflowResponse) {}
  /// Attempt to create a sub-dataflow
  rpc CreateSubDataflow(CreateSubDataflowRequest) returns(CreateSubDataflowResponse) {}
  /// Receive heartbeat
  rpc ReceiveHeartbeat(common.Heartbeat) returns (common.Response) {}
  /// Receive ack
  rpc ReceiveAck(common.Ack) returns (common.Response) {}
}

message SendEventToOperatorResponse {
  SendEventToOperatorStatusEnum status = 1;
}

enum SendEventToOperatorStatusEnum {
  DISPATCHING = 0;
  DONE = 1;
  FAILURE = 2;
}

message StopDataflowResponse {
  common.Response resp = 1;
}

message CreateSubDataflowRequest {
  common.ResourceId job_id = 1;
  common.Dataflow dataflow = 2;
}

message CreateSubDataflowResponse {
  common.DataflowStatus status = 1;
}